src/generation/snapshots/nn_data_test__min_csv_data.snap
---
created: "2019-05-23T04:12:41.077119Z"
creator: insta@0.8.1
source: src/generation/nn_data_generation.rs
expression: min
---
CSVOp {
    fm: 0.0,
    fa: 0.0,
    pm: 0.0,
    pa: -0.5,
    g: 0.0,
    l: 0.0,
    v: 0
}
