src/generation/snapshots/nn_data_test__normal_form_to_normal_data_test.snap
---
created: "2019-05-23T04:12:40.945959Z"
creator: insta@0.8.1
source: src/generation/nn_data_generation.rs
expression: normal_data
---
[
    TimedOp {
        t: Ratio {
            numer: 0,
            denom: 1
        },
        event_type: On,
        voice: 0,
        event: 0,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: -1,
            denom: 2
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 1,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 0,
            denom: 1
        },
        event_type: On,
        voice: 1,
        event: 0,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 5,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 1,
            denom: 1
        },
        event_type: Off,
        voice: 0,
        event: 0,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: -1,
            denom: 2
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 1,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 1,
            denom: 1
        },
        event_type: On,
        voice: 0,
        event: 1,
        fm: Ratio {
            numer: 2,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 1,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 2,
            denom: 1
        },
        event_type: Off,
        voice: 0,
        event: 1,
        fm: Ratio {
            numer: 2,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 1,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 2,
            denom: 1
        },
        event_type: On,
        voice: 0,
        event: 2,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 2
        },
        l: Ratio {
            numer: 1,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 3,
            denom: 1
        },
        event_type: Off,
        voice: 0,
        event: 2,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 2
        },
        l: Ratio {
            numer: 1,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 3,
            denom: 1
        },
        event_type: On,
        voice: 0,
        event: 3,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 2,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 5,
            denom: 1
        },
        event_type: Off,
        voice: 0,
        event: 3,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 2,
            denom: 1
        }
    },
    TimedOp {
        t: Ratio {
            numer: 5,
            denom: 1
        },
        event_type: Off,
        voice: 1,
        event: 0,
        fm: Ratio {
            numer: 1,
            denom: 1
        },
        fa: Ratio {
            numer: 0,
            denom: 1
        },
        pm: Ratio {
            numer: 1,
            denom: 1
        },
        pa: Ratio {
            numer: 0,
            denom: 1
        },
        g: Ratio {
            numer: 1,
            denom: 1
        },
        l: Ratio {
            numer: 5,
            denom: 1
        }
    }
]
