src/generation/snapshots/nn_data_test__test_csv_of_file_max_for_path.snap
---
created: "2019-05-24T00:57:33.671181Z"
creator: insta@0.8.1
source: src/generation/nn_data_generation.rs
expression: max_state
---
CSVOp {
    fm: 4.0,
    fa: 0.0,
    pm: 1.0,
    pa: 1.0,
    g: 1.0,
    l: 8.0,
    v: 1
}
