src/generation/snapshots/nn_data_test__test_csv_of_file_min_for_path.snap
---
created: "2019-05-24T00:57:33.711419Z"
creator: insta@0.8.1
source: src/generation/nn_data_generation.rs
expression: min_state
---
CSVOp {
    fm: 0.0,
    fa: 0.0,
    pm: 0.0,
    pa: -0.5,
    g: 0.0,
    l: 0.0,
    v: 0
}
